[package]
name = "hack_assembler"
version = "0.1.0"
license = "GPLv3"
authors = ["Leon Heidelbach <leon.heidelbach@hhu.de>"]
description = "The Hack Assembler assembles the Hack Assembly Language into Hack machine code."
edition = "2021"
workspace = ".."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
indexmap = "2.2.6"
lazy_static = "1.4.0"
shared = { path = "../shared" }
